Add dotnet corert nuget package

--- a/ImeSharp.Demo/ImeSharp.NetStandard.Demo.csproj
+++ b/ImeSharp.Demo/ImeSharp.NetStandard.Demo.csproj
@@ -2,11 +2,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ImeSharp\ImeSharp.NetStandard.csproj" />
+    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-29228-02" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFrameworks>net472;netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <DefineConstants>NETSTANDARD;</DefineConstants>
   </PropertyGroup>
